# depthai-cpp-python-unwrap

./: .gitignore  .gitmodules  CMakeLists.txt  PybindEmbedded.hpp  README.md  extern__depthai-python__CMakeList.txt.diff  extern__depthai-python__src__py_bindings.cpp.diff  main.cpp  pipeline.py
